Redesign top-level API
Closes #137